--- a/portfolio-parth/app/core/templates/index.html
+++ b/portfolio-parth/app/core/templates/index.html
@@ -11,7 +11,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Parth Patel - Data Engineer">
 
-    <link rel="icon" href="{{ url_for('core.static', filename='core/images/parth.png') }}" type="image/png" sizes="any">
+    <!-- Favicon: browser tab + Google search results -->
+    <link rel="icon" href="{{ url_for('core.static', filename='core/images/parth.png') }}" type="image/png" sizes="32x32">
+    <link rel="icon" href="{{ url_for('core.static', filename='core/images/parth.png') }}" type="image/png" sizes="16x16">
+    <link rel="shortcut icon" href="{{ url_for('core.static', filename='core/images/parth.png') }}" type="image/png">
+    <link rel="apple-touch-icon" href="{{ url_for('core.static', filename='core/images/parth.png') }}" sizes="180x180">
 
     <!-- SEO Meta Tags -->
     <title>Parth Patel | Senior Data Engineer | Azure, Databricks, PySpark | Toronto</title>
