--- a/portfolio-parth/app/core/templates/index.html
+++ b/portfolio-parth/app/core/templates/index.html
@@ -11,11 +11,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Parth Patel - Data Engineer">
 
-    <!-- Favicon: browser tab + Google search results -->
-    <link rel="icon" href="{{ url_for('core.static', filename='core/images/parth.png') }}" type="image/png" sizes="32x32">
-    <link rel="icon" href="{{ url_for('core.static', filename='core/images/parth.png') }}" type="image/png" sizes="16x16">
-    <link rel="shortcut icon" href="{{ url_for('core.static', filename='core/images/parth.png') }}" type="image/png">
-    <link rel="apple-touch-icon" href="{{ url_for('core.static', filename='core/images/parth.png') }}" sizes="180x180">
+    <!-- Favicon: browser tab + Google (SVG for sharpness at any size) -->
+    <link rel="icon" href="{{ url_for('core.static', filename='core/images/favicon.svg') }}" type="image/svg+xml" sizes="any">
+    <link rel="shortcut icon" href="{{ url_for('core.static', filename='core/images/favicon.svg') }}" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="{{ url_for('core.static', filename='core/images/favicon.svg') }}" type="image/svg+xml" sizes="180x180">
 
     <!-- SEO Meta Tags -->
     <title>Parth Patel | Senior Data Engineer | Azure, Databricks, PySpark | Toronto</title>
